--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -27,10 +27,10 @@
  F_TAX_GAIN_TOOLTIP_DELAYED: "GDP of §Y[THIS.GetName]§!: $§U[?THIS.gdp_total|0]§!b\nGDP/C of §Y[THIS.GetName]§!: $§U[?THIS.gdp_per_capita]§!k\n---------\n§CPopulation Income:§! $§G[?population_tax|+3]§!\n§LCorporate Income:§! $§G[?corporate_tax|+3]§!\n§GInternational Investments:§! $§G[?int_investments_rate|+3]§!\n§UResource Exports:§! $§G[?resource_sale_rate|+3]§!\n§HAdditional Income:§! $§G[?additional_income_rate|+3]§!\n\nGross Income: $§G[?display_income]§!"
 
  #Open Economy Menu Tooltips
- OPEN_ECONOMY_BUTTON: "Open Economic Screen"
- OPEN_ECONOMY_BUTTON_TT: "Opens the economic screen that shows expenditure and income. It also has a button to update your income/expenses. Furthermore, it will also show your GDP and GDP/C."
+ OPEN_ECONOMY_BUTTON: "Open §YEconomic Preview§! Interface"
+ OPEN_ECONOMY_BUTTON_TT: "Opens the economic screen that shows expenditure and income, your current number of factories, lease factories and buildings, tax rates, your §YGDP§! and §YGDP/C§! and other economic information. It also has a button to update your income/expenses without waiting for the week to end."
  GDP_TOTAL: "GDP"
- GDP_TOTAL_DESC: "Our Gross Domestic Product (GDP) is the value measure of all products and services produced in the country. Millennium Dawn uses GDP adjusted with PPP (Purchasing Power Parity) as this value takes local economic conditions into effect, making country comparison more useful."
+ GDP_TOTAL_DESC: "Our §YGross Domestic Product§! (GDP) is the value measure of all products and services produced in the country. Millennium Dawn uses GDP adjusted with PPP (Purchasing Power Parity) as this value takes local economic conditions into effect, making the country comparison more useful."
  NUM_GDP_TOTAL: "$$§U[?ROOT.gdp_total|1]§!b"
  NUM_GDP_TOTAL_DESC: "Our GDP is currently $§U[?ROOT.gdp_total|3]§! billion"
  NUM_GDP_TOTAL_DELAYED_DESC: "Approximate Contribution of Industries by Percent:\n§PCivilian Factories§!: [?ROOT.civil_fac_percent|%]\n§OMilitary Factories§!: [?ROOT.military_fac_percent|%]\n§BNaval Dockyards§!: [?ROOT.dockyard_fac_percent|%]\n§COffice Parks§!: [?ROOT.office_fac_percent|%]\n§GAgriculture§!: [?ROOT.agriculture_percent|%]\n§GResource Extraction§!: [?ROOT.resources_percent|%]\n"
