--- a/localisation/english/MD_pmc_l_english.yml
+++ b/localisation/english/MD_pmc_l_english.yml
@@ -89,7 +89,7 @@
  call_pmc_back_sov: "Call back units"
  call_pmc_back_sov_desc: "This will allow us to get our boys home, however we would have to pay compensation for contract termination with each country."
  pmc_category: "Private Military Companies"
- pmc_category_desc: "\n\n\n\n\n\n£CHVK_desctext_pmc\n\n\n\n\n\n\n\n\n§YPrivate Military Companies§!.\n\n§GRent§! your own §Yprivate army!§!\n§YCompanies§! §Gloyal§! to us, or ones we control directly will give us §Y20%§! §Gdiscount§! on their services.\n\n[PMC_max_available]\n§YCurrent list of PMC's§!:\n[PMC_Header_blackwater][PMC_Header_wagner][PMC_Header_aegis][PMC_Header_constellis][PMC_Header_md]"
+ pmc_category_tracker_desc: "§YPrivate Military Companies§!.\n\n§GRent§! your own §Yprivate army!§!\n§YCompanies§! §Gloyal§! to us, or ones we control directly will give us §Y20%§! §Gdiscount§! on their services.\n\n[PMC_max_available]\n§YCurrent list of PMC's§!:\n[PMC_Header_blackwater][PMC_Header_wagner][PMC_Header_aegis][PMC_Header_constellis][PMC_Header_md]"
  pmc_local_management: "Local military units"
  pmc_local_management_desc: "Local Private Military Companies. Local companies will always have 20% discount.\nWe can expand our capacity up to 7. We can improve our quality up to level 4\n\n[PMC_max_available]\n[PMC_local_header]"
  form_local_pmc: "Form Local PMC"
@@ -238,7 +238,7 @@
  pmc_front_create: "Create our own PMCs - §YFrontier Services Group PMCs§!."
  pmc_iron_create: "Create our own PMCs - §YIron Navy PMCs§!."
  pmc_sheriff_create: "Create our own PMCs - §YSheriff PMCs§!."
- 
+
 
  pmc_redut_create_TT: "Create our own PMCs - §YRedut PMCs§!."
  pmc_gazrpom_create_TT: "Create our own PMCs - §YGazprom PMCs§!."
@@ -247,7 +247,7 @@
  pmc_rosneft_create_TT: "Create our own PMCs - §YRosneft PMCs§!."
  pmc_sberbank_create_TT: "Create our own PMCs - §YSber PMCs§!."
  pmc_vtb_create_TT: "Create our own PMCs - §YVTB PMCs§!."
- 
+
  pmc_events.1.t: "[From.GetNameDef] recalls their mercenaries"
  pmc_events.1.d: "Some of our mercenary units get recalled to [From.GetNameDef] due to the orders of their overlord, they will provide compensation for such untimely contract termination but thats it."
  pmc_events.1.a: "Unfortunate."
