--- a/localisation/english/MD_influence_l_english.yml
+++ b/localisation/english/MD_influence_l_english.yml
@@ -80,6 +80,7 @@
  is_influencer_tt: "§H[ROOT.GetNameWithFlag]§! is an influencer in §Y[FROM.GetNameWithFlag]§!"
  is_top_three_influencer_tt: "§H[ROOT.GetNameWithFlag]§! is a top three influencer in §Y[FROM.GetNameWithFlag]§!"
  is_top_five_influencer_tt: "§H[ROOT.GetNameWithFlag]§! is a top five influencer in §Y[FROM.GetNameWithFlag]§!"
+ is_top_five_influencer_ct_tt: "§H[ROOT.GetNameWithFlag]§! is a top five influencer"
  top_three_twenty_percent_influencer_tt: "All of the following must be true:\n§H[ROOT.GetNameWithFlag]§! > 20% influence\n§H[ROOT.GetNameWithFlag]§! is a top three influencer in §Y[FROM.GetNameWithFlag]§!"
  top_three_thirty_percent_influencer_tt: "All of the following must be true:\n§H[ROOT.GetNameWithFlag]§! > 30% influence\n§H[ROOT.GetNameWithFlag]§! is a top three influencer in §Y[FROM.GetNameWithFlag]§!"
  is_top_influencer_fifty_percent: "All of the following must be true:\n§H[ROOT.GetNameWithFlag]§! > 50% influence\n§H[ROOT.GetNameWithFlag]§! is the top influencer in §Y[FROM.GetNameWithFlag]§!"
