--- a/Changelog.txt
+++ b/Changelog.txt
@@ -118,6 +118,7 @@ v1.10.0
   - Completely revamped US variants and starting production
   - Rebalanced and slightly tweaked Ethiopian-Eritrean war
   - Add agame rule for Germany focus
+  - Reworked Moroccan politics and political leaders
 
  Graphics:
   - Added the "Toofan MRAP" for Iran
