events first part

--- a/localisation/english/MD_focus_JAP_l_english.yml
+++ b/localisation/english/MD_focus_JAP_l_english.yml
@@ -428,6 +428,19 @@
  Japan.7.d: "The East China Sea has erupted into conflict following a confrontation between Chinese and Japanese aircraft. The clash reportedly began when Japanese jets were scrambled to intercept Chinese fighters over Japanese airspace. Rather than resulting in a Chinese retreat which has historically occurred after similar incidents, Japanese aircraft were fired upon, resulting in the deaths of several Japanese pilots and the loss of multiple aircraft. [JAP.GetLeader] has strongly condemned the incident and is reportedly engaged in urgent talks behind closed doors regarding Japan's response to this event."
  Japan.7.a: "Is a third Sino-Japanese War on the horizon?"
 
+ japan_foreign_policy.28.t: "[JAP.GetNamewithFlag] offers investments in petrochemical Industry!"
+ japan_foreign_policy.28.d: "[JAP.GetNamewithFlag] has offered us a potentially mutually beneficial investment deal. It will however, increase their influence on us. Should we accept?"
+ japan_foreign_policy.28.a: "Where to sign?"
+ japan_foreign_policy.28.b: "Sorry, no."
+
+ japan_foreign_policy.29.t: "[FROM.GetNamewithFlag] Accepts!"
+ japan_foreign_policy.29.d: "[FROM.GetNamewithFlag] accepted our economic investments proposal and the building process has begun. Our influence on them has been increased."
+ japan_foreign_policy.29.a: "Great!"
+
+ japan_foreign_policy.30.t: "[FROM.GetNamewithFlag] Rejects!"
+ japan_foreign_policy.30.d: "[FROM.GetNamewithFlag] did not accept our investment offer, though we will not suffer from decrease of relations."
+ japan_foreign_policy.30.a: "Very Unfortunate."
+
  # Ideas
  article_nine_jap: "Article 9"
  article_nine_jap_desc: "Article 9 of the Japanese Constitution  is a clause in the national Constitution of Japan outlawing war as a means to settle international disputes involving the state. \n \nThe Constitution came into effect on May 3, 1947, following World War II. In its text, the state formally renounces the sovereign right of belligerency and aims at an international peace based on justice and order. The article also states that, to accomplish these aims, armed forces with war potential will not be maintained."
