--- a/localisation/english/MD_africa_events_l_english.yml
+++ b/localisation/english/MD_africa_events_l_english.yml
@@ -249,6 +249,7 @@
  senegal_md.101.o2: "Peace at last!"
 
  # the Central African Republic
+ # TODO: Add news events for the CAR
  central_africa.2.t: "The Status of Jean-Luc Mandaba"
  central_africa.2.d: "Jean-Luc Mandaba was the previous prime minister of our country in the early 1990s. Furthermore, he was a founder of the Karako militia forces that support our current government and are integral to the military forces. Jean-Luc, though, has been acting fairly suspiciously. He could be formulating a coup against us. Should we remove this threat?"
  central_africa.2.a: "Eliminate Him"
@@ -503,12 +504,12 @@
 
  # Niger - This section is a set of events in Niger. MNJ is a regional organization in Niger.
  mali.25.t: "MNJ Attack Outposts"
- mali.25.d: "The MNJ (Niger Movement for Justice) has unleased a series of devastating attacks on our military outposts in the west and northern sides of our country. The fighting has seen a large number of locals displaced due to the conflict and a number of our forces killed, wounded, or lost during the fighting. The Tuaregs fighting in Mali has started to spill over into our Tuareg regions causing ever-increasing tension which has culminated in the attacks on our regional outposts."
+ mali.25.d: "The Niger Movement for Justice (MNJ)) has unleashed a series of devastating attacks on our military outposts in the west and northern sides of our country. The fighting has seen a large number of locals displaced due to the conflict and a number of our forces killed, wounded, or lost during the fighting. The Tuaregs fighting in Mali has started to spill over into our Tuareg regions causing ever-increasing tension which has culminated in the attacks on our regional outposts."
  mali.25.a: "Mobilize the Military & Request Assitance"
  mali.25.b: "Destroy the Terrorists"
 
  mali.26.t: "MNJ Attacked Agadez Airport"
- mali.26.d: "The airport of Agadez has been attacked by the MNJ causing further disruptions in the region at the behest of the rebel group MNJ. The rebel group has bigger ambitions at thwarting our ability to maintain some reasonable level of security in the region. The rebels have quickly retreated after the fighting and are now fleeing back to their native lands. A regional garrison is mustered and ready to advance against these so-called rebels. What are your orders? Should we mount a counterattack or bide our time and prepare for the next offensive?"
+ mali.26.d: "The airport of Agadez has been attacked by the Niger Movement for Justice (MNJ) causing further disruptions in the region at the behest of the rebel group MNJ. The rebel group has bigger ambitions at thwarting our ability to maintain some reasonable level of security in the region. The rebels have quickly retreated after the fighting and are now fleeing back to their native lands. A regional garrison is mustered and ready to advance against these so-called rebels. What are your orders? Should we mount a counterattack or bide our time and prepare for the next offensive?"
  mali.26.a: "Send a Party After These Terrorists"
  mali.26.b: "Prepare for the Next Offensive"
 
@@ -729,3 +730,5 @@
  haiti.21.d1: "The fighting against The Cannibal Army and the brother has finally concluded. It has now drastically tipped in our favor as the country is reclaimed in the name of our president Jean-Bertrand Aristide. The police forces have shown outstanding bravery in fighting back the militant gangs. Haiti is once again whole."
  haiti.21.d2: "The war has finally concluded with the deposition of Jean-Bertrand Aristide and the installment of Boniface Alexandre as interim president. Haiti will once again see peace as the sunset sets and concludes the conflict. The rebel forces have put down their arms in the turnover for the conflict. It was a successful conclusion to the conflict. Time will tell what the consequences are of this conflict."
  haiti.21.a: "A New Dawn for Haiti"
+
+ # TODO: Add news events for Haiti
