--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -5748,14 +5748,17 @@
  HAI.Nat_Autocracy_desc: "Military Rule - Forces Armées d'Haïti (or Armed Forces of Haiti in English) is the official title of the Haitian military, it was suspended and subsequently disbanded in 1995 due to the prevalence of coups and coup attempts from within the military high command."
  HEZ.Vilayat_e_Faqih: "£generic_Vilayat_e_Faqih_small Hezbollah"
  HEZ.Vilayat_e_Faqih_desc: ""
+ HKG.Western_Autocracy: "£HK_Demosisto Demosisto"
+ HKG.Western_Autocracy_desc: "Liberalism - <WIP DESC>"
+ HKG.Western_Autocracy_icon: "£HK_Demosisto"
  HKG.conservatism: "£HKG_conservatism Democratic Party"
  HKG.conservatism_desc: "Centrist - The Democratic Party was the largest party in Hong Kong's first ever elected legislature in 1995. It is one of the most moderate pan-democrat parties, seeking compromise with Beijing in a way that has alienated some of its former supporters."
  HKG.liberalism: "£HK_Citizens_Party Citizens Party"
  HKG.liberalism_icon: "£HK_Citizens_Party"
- HKG.liberalism_desc: "Liberal - The Citizens Party, like the other members of the pro-democracy camp, calls for universal suffrage and the protection of individual liberties. What sets the party apart is its concern for environmental protection and minority rights."
+ HKG.liberalism_desc: "Liberalism - The Citizens Party, like the other members of the pro-democracy camp, calls for universal suffrage and the protection of individual liberties. What sets the party apart is its concern for environmental protection and minority rights."
  HKG.liberalism_2006: "£HKG_liberalism_2006 Civic Party"
  HKG.liberalism_2006_icon: "£HKG_liberalism_2006"
- HKG.liberalism_2006_desc: "Liberal - The Civic Party is a mainstream pro-democracy party founded by a group of barristers that focuses on the issues of universal suffrage, civil liberties and rule of law."
+ HKG.liberalism_2006_desc: "Liberalism - The Civic Party is a mainstream pro-democracy party founded by a group of barristers that focuses on the issues of universal suffrage, civil liberties and rule of law."
  HKG.socialism: "£HK_The_Frontier The Frontier"
  HKG.socialism.icon: "£HK_The_Frontier"
  HKG.socialism_desc: "Social Democrat - Emily Lau's brainchild, the Frontier, is a more radical pro-democracy party than some of the other pan-democrats, calling for a new constitution to replace the Basic Law."
