--- a/localisation/english/MD_focus_JAP_l_english.yml
+++ b/localisation/english/MD_focus_JAP_l_english.yml
@@ -443,9 +443,15 @@
 
  japan_foreign_policy.31.t: "Kuril Issue stance debate."
  japan_foreign_policy.31.d: "Kuril dispute with Russia has been long issue, which has since gave us a lot of barriers in our relations with them. Now we must decide what is our final stance on it, and how we should approach the issue."
- japan_foreign_policy.31.a: "Let's abandon Kuril Islands"
+ japan_foreign_policy.31.a: "Let's abandon Kuril Islands and ask for defence pact."
  japan_foreign_policy.31.b: "Keeping the status-quo is more far-seeing."
  japan_foreign_policy.31.c: "Send a demand right now!"
+
+ japan_foreign_policy.32.t: "Japan renounces their claims on Kuril Islands!"
+ japan_foreign_policy.32.d: "Recently, Japanese government renounced their claims on our soil and requested protection pact with us!"
+ japan_foreign_policy.32.a: "Great!"
+
+ jap_kur_tt: "We will able to choose between §tabandoning§! §CKuril islands§!, keeping the §Ystatus-quo§! or outright §Odemanding§! them from [SOV.GetNamewithFlag]!"
 
  # Ideas
  article_nine_jap: "Article 9"
