--- a/localisation/english/MD_africa_events_l_english.yml
+++ b/localisation/english/MD_africa_events_l_english.yml
@@ -504,7 +504,7 @@
 
  # Niger - This section is a set of events in Niger. MNJ is a regional organization in Niger.
  mali.25.t: "MNJ Attack Outposts"
- mali.25.d: "The Niger Movement for Justice (MNJ)) has unleashed a series of devastating attacks on our military outposts in the west and northern sides of our country. The fighting has seen a large number of locals displaced due to the conflict and a number of our forces killed, wounded, or lost during the fighting. The Tuaregs fighting in Mali has started to spill over into our Tuareg regions causing ever-increasing tension which has culminated in the attacks on our regional outposts."
+ mali.25.d: "The Niger Movement for Justice (MNJ) has unleashed a series of devastating attacks on our military outposts in the west and northern sides of our country. The fighting has seen a large number of locals displaced due to the conflict and a number of our forces killed, wounded, or lost during the fighting. The Tuaregs fighting in Mali has started to spill over into our Tuareg regions causing ever-increasing tension which has culminated in the attacks on our regional outposts."
  mali.25.a: "Mobilize the Military & Request Assitance"
  mali.25.b: "Destroy the Terrorists"
 
