legco gui tweak

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -318,7 +318,8 @@
  legco_total_seats: "Total: §Y[?legco_total_seats]§!"
  legco_approvement_seats: "Approval: §G[?legco_approval_seats]§!"
  legco_opposition_seats: "Negative: §R[?legco_negative_seats]§!"
- legco_current_motion: "Current Motion: [ROOT.legco_current_motion]"
+ legco_motion_title: "Current Motion: "
+ legco_current_motion: "[ROOT.legco_current_motion]"
  legco_none_motion_tt: "None"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
  legco_electoral_reform_tt: "Electoral Reform"
