--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -1818,7 +1818,7 @@
  BSH_red_army_desc: "We will create our own Red Army, which will lead us into battle to defend socialist achievements and successes"
  BSH_volga_ssr: "Volga SSR"
  BSH_volga_ssr_desc: "We must unite the other peoples of this region around us, only in this way will we achieve greatness"
- BSH_volga_ssr_sov: "Idel-Ural as part of Russia"
+ BSH_volga_ssr_sov: "Volga SSR as part of Russia"
  BSH_volga_ssr_sov_desc: "We are ready to offer Russia a completely new entity that will be able to raise the economy of the region to a new level"
  BSH_volga_ssr_annex: "Independent Volga SSR"
  BSH_volga_ssr_annex_desc: "Together with the peoples of the Volga region, we will create the strongest state on the territory of the former Russia"
