--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -2538,7 +2538,7 @@
  SOV_help_prigoba: "向萨赫勒地区发送装备"
  SOV_help_prigoba_desc: "我们的代理人国家需要军事支持"
  SOV_pmc_redut: "私人军事公司Redut"
- SOV_pmc_redut_desc: "参与俄罗斯入侵乌克兰的俄罗斯私营军事公司由俄罗斯军事人员（包括动员的人员）组成。该堡垒是由俄罗斯对外情报局、俄罗斯空军和部分俄罗斯军队的几个退伍军人小团体以及国防部在军事和维和任务中获得战斗经验的部门组成。"
+ SOV_pmc_redut_desc: "参与俄罗斯入侵乌克兰的俄罗斯私营军事公司由俄罗斯军事人员（包括动员的人员）组成。堡垒是由俄罗斯对外情报局、俄罗斯空军和部分俄罗斯军队的几个退伍军人小团体以及国防部在军事和维和任务中获得战斗经验的部门组成。"
  SOV_storm_z: "风暴-Z"
  SOV_storm_z_desc: "我们将招募囚犯到我们自己的单位"
  SOV_special_o: "特种部队\"O\""
