--- a/localisation/simp_chinese/MD_money_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_money_l_simp_chinese.yml
@@ -20,10 +20,10 @@
  F_TAX_RATE_TOOLTIP: "他们目前§H税率§!为[?tax_rate]%\n\n§Y企业税率：§![?corporate_tax_rate]%\n§Y人口税率：§![?population_tax_rate]%\n"
  F_TAX_GAIN_TOOLTIP: "他们每周获得$[?display_income]§HB§!收入。"
  F_TAX_GAIN_TOOLTIP_DELAYED: "§Y[THIS.GetName]§!GDP：$§U[?THIS.gdp_total|0]§!B\n§Y[THIS.GetName]§!GDP/C： $§U[?THIS.gdp_per_capita]§!K\n---------\n§C人口收入：§! $§G[?population_tax|+3]§!\n§L企业税收：§! $§G[?corporate_tax|+3]§!\n§G国际投资：§! $§G[?int_investments_rate|+3]§!\n§U资源出口：§! §G[?resource_sale_rate|+3]§!\n§H额外收入：§! $§G[?additional_income_rate|+3]§!\n\n总计收入： $§G[?display_income]§!"
- OPEN_ECONOMY_BUTTON: "打开经济系统UI"
- OPEN_ECONOMY_BUTTON_TT: "打开显示支出和收入的经济UI。它还有一个按钮来更新您的收入/支出。此外，它还会显示您的GDP和人均GDP。"
+ OPEN_ECONOMY_BUTTON: "打开§Y经济预览§!界面"
+ OPEN_ECONOMY_BUTTON_TT: "打开经济界面，显示支出和收入、您当前的工厂数量、租赁工厂和建筑物、税率、您的§YGDP§!和§YGDP/C§!以及其他经济信息。它还有一个按钮可以随时更新您的收入/支出，而无需等到一周结束。"
  GDP_TOTAL: "GDP"
- GDP_TOTAL_DESC: "我们的国内生产总值(GDP)是衡量国家生产的所有产品和服务的价值。千禧黎明使用经购买力平价(PPP)调整后的GDP，因为这一数值考虑到了当地的经济状况，使国家比较更加有用。"
+ GDP_TOTAL_DESC: "我们的§Y国内生产总值§!(GDP)是衡量国家生产的所有产品和服务的价值。千禧黎明使用经购买力平价(PPP)调整后的GDP，因为这一数值考虑到了当地的经济状况，使国家比较更加有用。"
  NUM_GDP_TOTAL: "$$§U[?ROOT.gdp_total|1]§!B"
  NUM_GDP_TOTAL_DESC: "我们目前的GDP为$§U[?ROOT.gdp_total|3]§!B"
  NUM_GDP_TOTAL_DELAYED_DESC: "各行业的大致贡献百分比：\n§P民用工厂§!：[?ROOT.civil_fac_percent|%]\n§O军用工厂§!：[?ROOT.military_fac_percent|%]\n§B海军船坞§!：[?ROOT.dockyard_fac_percent|%]\n§C办公园区§!：[?ROOT.office_fac_percent|%]\n§G农业§!：[?ROOT.agriculture_percent|%]\n§G资源开采§!：[?ROOT.resources_percent|%]"
