--- a/localisation/simp_chinese/MD_pmc_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_pmc_l_simp_chinese.yml
@@ -88,12 +88,11 @@
  call_pmc_back_sov: "召回单位"
  call_pmc_back_sov_desc: "这将使我们的孩子们回家，但必须为与每个国家的合同终止支付赔偿。"
  pmc_category: "私人军事公司"
- pmc_category_desc: "\n\n\n\n\n\n£CHVK_desctext_pmc\n\n\n\n\n\n\n\n\n§Y私人军事公司§!\n\n§G运营§!你自己的§Y私人军队！§!\n对我们§G忠诚§!的§Y公司§!或我们直接控制的公司将在服务上给我们§Y20%§!§G折扣§!。\n\n[PMC_max_available]\n§Y当前的私人军事公司列表§!：\n[PMC_Header_blackwater][PMC_Header_wagner][PMC_Header_aegis][PMC_Header_constellis][PMC_Header_md]"
  pmc_local_management: "本地军事单位"
  pmc_local_management_desc: "本地私人军事公司。本地公司总是有20%优惠。\n我们可以扩大容量到7。我们可以提高质量到4。\n\n[PMC_max_available]\n[PMC_local_header]"
  form_local_pmc: "建立本地私人军事公司"
  open_blackwater_desc: "黑水公司是一家美国私人军事公司，由前海豹突击队军官埃里克·普林斯于1996年12月26日创立。黑水公司及其前身为美国联邦政府提供合同安全服务。自2003年以来，它一直为中央情报局提供服务。"
- open_aegis_desc: "后盾防务公司是一家英国私人军事和私人安全公司，在阿富汗、阿拉伯联合酋长国、伊拉克、沙特阿拉伯、利比亚、索马里和莫桑比克设有海外办事处。它是后盾集团公司的一部分，该集团包括总部位于美国的后盾LLC。该公司由蒂姆·斯派塞于2002年创立，他之前是私人军事公司桑德莱恩国际公司的首席执行官；企业家杰弗里·戴以及前投资银行家马克•布洛和多米尼克•阿姆斯特朗。"
+ open_aegis_desc: "后盾防务公司是一家英国私人军事和私人安全公司，在阿富汗、阿拉伯联合酋长国、伊拉克、沙特阿拉伯、利比亚、索马里和莫桑比克设有海外办事处。它是后盾集团公司的一部分，该集团包括总部位于美国的后盾有限责任公司。该公司由蒂姆·斯派塞于2002年创立，他之前是私人军事公司桑德林国际公司的首席执行官；企业家杰弗里·戴以及前投资银行家马克·布洛和多米尼克·阿姆斯特朗。"
  open_constellis_desc: "康思泰集团成立于2010年，由一群运营商和投资者组成，他们试图在复杂的风险管理行业中整合一流的品牌、资产和人才。康斯坦斯家族公司促进了合规和卓越运营的文化，已经发展成为一个由行业领导者组成的全球团队，包括三叶丛林、奥丽芙集团和发展倡议，以及传统公司中心地带、ACADEMI、AMK9、OMNIPLEX、策略社会和爱丁堡国际。"
  get_constellis_light_infantry_desc: "由轻步兵和炮兵支援组成的旅级部队，适用于恶劣地形，而且比其他陆军设计更便宜。"
  get_aegis_light_infantry_desc: "由轻步兵和炮兵支援组成的旅级部队，适用于恶劣地形，而且比其他陆军设计更便宜。"
@@ -158,12 +157,12 @@
  pmc_sadat: "雇佣§Y萨达特§!训练士兵的专家"
  pmc_rsb: "雇佣§YRSB集团§!安全专家"
  pmc_asgard_TT: "§Y@GER阿斯嘉私人军事公司§!当前服务未§G使用§!。"
- pmc_mpri_TT: "§Y@USA军事职业资源公司§!当前服务未§G使用§!。"
+ pmc_mpri_TT: "§Y@USA军事资源顾问§!当前服务未§G使用§!。"
  pmc_itt_TT: "§Y@GER G4S私人军事公司§!当前服务未§G使用§!。"
  pmc_sadat_TT: "§Y@TUR萨达特私人军事公司§!当前服务未§G使用§!。"
  pmc_rsb_TT: "§Y@SOV RSB集团§!当前服务未§G使用§!。"
  pmc_asgard_idea: "§0私人军事公司§!阿斯嘉"
- pmc_mrpi_idea: "§0私人军事公司§!军事职业资源公司"
+ pmc_mrpi_idea: "§0私人军事公司§!军事资源顾问"
  pmc_sadat_idea: "§0私人军事公司§!萨达特"
  pmc_rsb_idea: "§0私人军事公司§!RSB集团"
  open_other: "打开§Y其他私人军事公司§!单位"
@@ -256,3 +255,4 @@
  pmc_rosneft_create_TT: "创建自有私人军事公司 - §Y俄罗斯石油公司私人军事公司§!。"
  pmc_sberbank_create_TT: "创建自有私人军事公司 - §Y俄罗斯联邦储蓄银行私人军事公司§!。"
  pmc_vtb_create_TT: "创建自有私人军事公司 - §Y俄罗斯外贸银行私人军事公司§!。"
+ pmc_category_tracker_desc: "§Y私人军事公司§!\n\n§G出借§!你自己的§Y私人武装！§!\n§G忠诚§!于我们的§Y公司§!，或者直属于我们的武装为我们服务时，将提供§Y20%§!的§G折扣§! 。\n\n[PMC_max_available]\n§Y当前私人军事公司列表§!：\n[PMC_Header_blackwater][PMC_Header_wagner][PMC_Header_aegis][PMC_Header_constellis][PMC_Header_md]"
