--- a/localisation/simp_chinese/MD_focus_TUR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_TUR_l_simp_chinese.yml
@@ -828,7 +828,7 @@
  TUR_reform_village_institutes_desc: "在20世纪40年代，执政的§W[conservatism_L]§!政府在全国各地建立了村庄学院。这些学院是为农村地区的贫困儿童提供教育和职业培训的机构。我们应该重新建立这些学院，以促进农村地区的发展和现代化"
  TUR_expand_shipping_industry: "支持渔业发展"
  TUR_expand_shipping_industry_desc: "渔业的发展不仅能够惠及农村民众和他们的小型企业，也能为国家的长远利益做出贡献"
- TUR_deradicalisation_program: "开展去极端化计划"
+ TUR_deradicalisation_program: "开展去极端化项目"
  TUR_deradicalisation_program_desc: "德尼兹·巴伊卡尔是反对恐怖主义的坚定拥护者。我们尊重人民中的保守派，但必须铲除极端分子的势力。"
  TUR_increase_education_spending: "提高教育水平"
  TUR_increase_education_spending_desc: "作为一名副教授，德尼兹·巴伊卡尔深知教育的重要性。他是在撰写了一篇关于1965年§W[conservatism_L]§!!选举失利的论文后步入政坛的。"
