--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1177,7 +1177,7 @@
  BLR_lit_invite: "Our agents will soon be all over the Lithuanian government, it's time to move on to drastic measures"
  #UNION STATE
  BLR_Union_state_category: "Union State"
- BLR_Union_state_category_desc: "\n\n\n\n\n\n£UNS_desctext_union_state\n\n\n\n\n\n\n\n\n§YThe Union State§! is a unique supranational entity where the [BLR.GetFlag][SOV.GetFlag]§Yunion§! between two states allows them to coexist without losing the independence of one of them. \n§W--------------§!\n [belarus_ready_union_state]\n[serbia_ready_union_state]"
+ BLR_Union_state_category_desc: "§YThe Union State§! is a unique supranational entity where the [BLR.GetFlag][SOV.GetFlag]§Yunion§! between two states allows them to coexist without losing the independence of one of them. \n§W--------------§!\n[belarus_ready_union_state]\n[serbia_ready_union_state]"
  #BELARUS
  BLR_union_migratio_card: "[union_state_flag_sov_or_blr]§YMigration Card§! of a Single Sample"
  BLR_union_migratio_card_desc: "A single migration card will make it easier for our citizens to move around the territory of the Union State"
