--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -870,7 +870,7 @@
  BLR_Bpf_youth_org: "把“BPF 青年团”变成一个政党组织"
  BLR_lit_invite: "我们的特工很快将在立陶宛全面部署，是时候采取激进措施了"
  BLR_Union_state_category: "联盟国"
- BLR_Union_state_category_desc: "\n\n\n\n\n\n£UNS_desctext_union_state\n\n\n\n\n\n\n\n\n§Y联盟国§!是一个独特的超国家实体，[BLR.GetFlag][SOV.GetFlag]之间的§Y联盟§!允许它们共存而不失去其中一个国家的独立性。\n§W--------------§!\n[belarus_ready_union_state]\n[serbia_ready_union_state]"
+ BLR_Union_state_category_desc: "§Y联盟国§!是一个独特的超国家实体，[BLR.GetFlag][SOV.GetFlag]之间的§Y联盟§!允许它们共存而不失去其中一个国家的独立性。\n§W--------------§!\n[belarus_ready_union_state]\n[serbia_ready_union_state]"
  BLR_union_migratio_card: "[union_state_flag_sov_or_blr]单一§Y移民证§!"
  BLR_union_migratio_card_desc: "一份移民证将使我们的公民更容易在联盟国领土上迁移"
  BLR_joint_military_academies: "[union_state_flag_sov_or_blr]§Y联合§!军事学院"
