Small tweak of China

--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -715,7 +715,7 @@
  CHI_Huawei: "Huawei"
  CHI_Huawei_desc: "In the areas of telecommunications and consumer electronics, Huawei is one of the most innovative firms worldwide. We should support this rising tech giant."
  CHI_Xiaomi: "Xiaomi"
- CHI_Xiaomi_desc: "Xiaomi is an up and coming smartphone manufacturer with significant potential. We should help this young firm achieve greater prominence."
+ CHI_Xiaomi_desc: "Xiaomi is an up and coming smart equipment manufacturer with significant potential. We should help this young firm achieve greater prominence."
  CHI_Chinese_Tech_Dominance: "Chinese Tech Dominance"
  CHI_Chinese_Tech_Dominance_desc: "Now that our major tech companies have received sufficient support from the state, we can establish China's dominance over the global technology industry."
  CHI_Cheaper_Production: "Cheaper Production"
@@ -1786,3 +1786,6 @@
  ETK_sar_exec: "Xinjiang SAR Establish"
  jebtsundamba_sat: "9th Jebtsundamba Khutuktu finished sitting-in-the-bed"
  CHI_taiwan_strait_war: "The Taiwan Strait War Erupted"
+ 
+ #Tech Bonus
+ CHI_Xiaomi_Vehicle: "Xiaomi Vehicle"
