--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -338,6 +338,8 @@
  CHI_idea_high_speed_railway_modifier_desc: "The High-speed Railway of the People's Republic of China is currently the largest high-speed railway network in the world."
  CHI_electric_car_project_idea: "Chinese Electric Car Project"
  CHI_electric_car_project_idea_desc: "China's electric car project will be a leap forward in vehicle industrial."
+ CHI_electric_car_project_idea_1: "Chinese Electric Car Project with Xiaomi assist"
+ CHI_electric_car_project_idea_1_desc: "China's electric car project will be a leap forward in vehicle industrial with Xiaomi assist."
  CHI_bilibili_idea: "Bilibili"
  CHI_bilibili_idea_desc: "Your uncle, me, really getting angry."
  CHI_studyding_strengthen: "Study and Strengthen the Nation"
