--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -912,3 +912,5 @@
  CHI_studyding_strengthen_desc: "数字版本的主席语录"
  cfa_franc: "非洲金融共同体法郎"
  cfa_franc_desc: "非洲金融共同体法郎是两种不同货币的统称：西非金融共同体法郎和中非金融共同体法郎。虽然它们是不同的货币，但实际上可以互换。该货币与欧元挂钩，因此可以实现更大的发展。"
+ CHI_electric_car_project_idea_1: "小米加持的中国电动汽车计划"
+ CHI_electric_car_project_idea_1_desc: "小米加持的中国电动汽车计划将是汽车工业的一次飞跃。"
