--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -609,7 +609,7 @@
  CHI_Huawei: "华为"
  CHI_Huawei_desc: "华为是在电信和消费电子领域最具创新性的全球公司之一。我们应该支持这个正在崛起的科技巨头。"
  CHI_Xiaomi: "小米"
- CHI_Xiaomi_desc: "小米是一个有巨大潜力的新兴智慧手机制造商。我们应该帮助这家年轻的公司获得更大的声望。"
+ CHI_Xiaomi_desc: "小米是一个有巨大潜力的新兴智能设备制造商。我们应该帮助这家年轻的公司获得更大的声望。"
  CHI_Chinese_Tech_Dominance: "中国的科技主导地位"
  CHI_Chinese_Tech_Dominance_desc: "既然我们的主要科技公司已经从国家得到了足够的支持，我们就可以确立中国在全球科技行业的主导地位。"
  CHI_Cheaper_Production: "廉价生产"
@@ -1595,3 +1595,4 @@
  CHI_Socialist_Reconstruction_desc: "自中国改革开放以来，我国经济不平等不断加剧，党内腐败泛滥。在为“经济建设”服务的过程中，我们的前辈们忘记了中国共产党的初衷，即为中国人民服务。是时候回到革命的老路上了。"
  CHI_Study_and_Strengthen_Nation: "学习强国"
  CHI_Study_and_Strengthen_Nation_desc: "该应用程序提供意识形态课程，允许与朋友视频聊天、发送阅读后删除的消息、创建个人日历、通过国家媒体获取信息或观看有关中国共产党历史的电视剧。"
+ CHI_Xiaomi_Vehicle: "小米车辆"
