Small tweak of Vietnam

--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -395,7 +395,8 @@
  socialist_vietnam_desc: "The Socialist Republic of Vietnam implements one-party dictatorship and adheres to the leadership of the Communist Party of Vietnam."
  lao_vietnan_treaty: "Lao-Vietnamese Treaty of Friendship and Cooperation"
  lao_vietnan_treaty_desc: "The treaty signed by the Communist Party of Laos and the Communist Party of Vietnam in Vientiane on July 18, 1977 was an important layout for Vietnam to conceive the establishment of the "Indochina Federation" at that time."
-
+ VIE_VPA_Business_Ventures: "VPA Business Ventures"
+ VIE_VPA_Business_Ventures_desc: "In the 1960s and 1970s, the Vietnamese military had business activities, mainly importing from China and the Soviet Union. After the Battle of Two Mountains in 1990, China and Vietnam completely stopped the border war, so Vietnam cut military spending and minimized expenses. In the 1990s, Vietnam's military expenditure fell sharply, and Vietnam imitated China's military business, allowing the military to engage in business activities and use the money earned to repay debts and improve military equipment and welfare."
  dominance_of_the_cpp: "Dominance of the CPP"
  dominance_of_the_cpp_desc: "The Cambodian People's Party has dominated the Cambodian political scene since the reformation of the Cambodian constitution.\n"
 
