--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -914,3 +914,5 @@
  cfa_franc_desc: "非洲金融共同体法郎是两种不同货币的统称：西非金融共同体法郎和中非金融共同体法郎。虽然它们是不同的货币，但实际上可以互换。该货币与欧元挂钩，因此可以实现更大的发展。"
  CHI_electric_car_project_idea_1: "小米加持的中国电动汽车计划"
  CHI_electric_car_project_idea_1_desc: "小米加持的中国电动汽车计划将是汽车工业的一次飞跃。"
+ VIE_VPA_Business_Ventures: "越南人民军经商"
+ VIE_VPA_Business_Ventures_desc: "在20世纪60、70年代，越南军队就有经营活动，主要是从中国和苏联进口生意。1990年两山战役后，中国和越南完全停止边境战事，因此越南削减军事开支，最低限度压缩经费。在90年代，越南军队的军费大幅度下跌，而越南仿照中国的军队经商，让军队开展经营商业活动，用赚来的钱偿还债务和改善军队装备与福利。"
