subject fix sov

--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -516,6 +516,7 @@
  TAT_full_social_support: "Consequences Of The Health Policy"
  TAT_industry: "Industrial Development"
  TAT_agro: "Development of the Agricultural Complex"
+ TAT_agro_export: "Cooperation with §Y[TAT.GetNamewithFlag]§!"
  TAT_five_year_plans: "Five-Year Plan"
  TAT_new_workplace: "New Workplaces"
  TAT_control_economic_idea: "Controlled Economic"
@@ -789,6 +790,28 @@
  subject_rus.50.t: "[BSH.GetNameWithFlag] Requests The Creation of Volga SSR"
  subject_rus.50.d: "The [SOV.GetFlag]Russian government rejected our bill on the creation of the Volga SSR"
  subject_rus.50.a: "Sadly"
+
+ subject_rus.51.t: "[TAT.GetNameWithFlag] Offers Us Cooperation"
+ subject_rus.51.d: "[TAT.GetNameWithFlag] offers us to conclude a trade agreement that involves cooperation with their agro-industrial complex. Will we agree?"
+ subject_rus.51.a: "Advantageous Offer"
+ subject_rus.51.b: "No"
+ subject_rus.52.t: "[FROM.GetNameWithFlag] Has Agreed To Cooperate"
+ subject_rus.52.d: "[FROM.GetNameWithFlag] has agreed to sign a contract with us for cooperation with our agro-industry"
+ subject_rus.52.a: "Nice"
+ subject_rus.53.t: "[FROM.GetNameWithFlag] Refused To Cooperate"
+ subject_rus.53.d: "[FROM.GetNameWithFlag] refused to sign a contract with us for cooperation with our agro-industry"
+ subject_rus.53.a: "Nice"
+
+ subject_rus.54.t: "[BSH.GetNameWithFlag] Offers Us Cooperation"
+ subject_rus.54.d: "[BSH.GetNameWithFlag] offers us to conclude a trade agreement that involves cooperation with their agro-industrial complex. Will we agree?"
+ subject_rus.54.a: "Advantageous Offer"
+ subject_rus.54.b: "No"
+ subject_rus.55.t: "[FROM.GetNameWithFlag] Has Agreed To Cooperate"
+ subject_rus.55.d: "[FROM.GetNameWithFlag] has agreed to sign a contract with us for cooperation with our agro-industry"
+ subject_rus.55.a: "Nice"
+ subject_rus.56.t: "[FROM.GetNameWithFlag] Refused To Cooperate"
+ subject_rus.56.d: "[FROM.GetNameWithFlag] refused to sign a contract with us for cooperation with our agro-industry"
+ subject_rus.56.a: "Nice"
 
  SUB_bsh_hubei: "Bashkir Investments"
  BSH_agrodom: "Belarusian "Amkodor""
@@ -1266,6 +1289,7 @@
  BSH_bashneft_money: "Investment in Bashneft"
  BSH_bashneft_money_desc: "We will develop investments in Bashneft as one of our key enterprises"
  BSH_bashneft: "Bashneft"
+ BSH_agro_export: "Cooperation with §Y[BSH.GetNamewithFlag]§!"
  BSH_agro_autarky: "Farming Autarky"
  BSH_agro_autarky_I: "Farming Autarky Finalized"
  BSH_agro_investition: "Investing in Farms"
