--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -304,30 +304,50 @@
  HKG_idea_patriotic_education_reform_desc: "Patriotic education is missing from the existing Hong Kong education curriculum. We will add Liberal Studies to fill that gap."
  HKG_idea_chinese_based_education_reform: "Chinese-based Education Reform"
  HKG_idea_chinese_based_education_reform_desc: "All schools in Hong Kong must teach in Chinese. Our children must be able to speak Chinese."
+
+ HKG_idea_railway_development_strategy_2000: "Railway Development Strategy 2000"
  #Tooltips
  Basic_Law_HKG_idea_tt: "§HThis idea will be cancalled after [HKG.GetFlag]Hong Kong Declare its §RIndependent.§!§!"
  HKG_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[HKG.GetFlag]Hong Kong§! is not allowed to have any army and cannot change its military policy.§!"
  HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §CPro-establishment camp§!, §8Pan-democracy camp§! and §GLocalist camp§!. Seats in the Legislative Council are decided by their approval ratings."
+
  OPEN_LegCo_BUTTON: "§YLegislative Council§! of Hong Kong S.A.R"
  OPEN_LegCo_BUTTON_TT: "§YThe Legislative Council§! of the Hong Kong S.A.R. is the unicameral legislature of Hong Kong. It sits under China's \"one country, two systems\" constitutional arrangement, and is the power centre of Hong Kong's hybrid representative democracy."
  CLOSE_LegCo_BUTTON: "Close the LegCo"
  HKG_LegCo_TITLE: "Legislative Council"
+
+ legco_pro_beijing_camp_desc: " £HKG_Conservative Democratic Alliance for the Betterment of Hong Kong (DAB)\n£HKG_Autocracy The New People's Party (NPP)\n£HKG_anarchist_communism Hong Kong Federation of Trade Unions (HKFTU)\n£HKG_Neutral_conservatism Path of Democracy\n£HK_Liberal_Party Liberal Party\n£generic_Neutral_Libertarian_small Third Side\n"
+ legco_pan_democracy_camp_desc: " £HK_Demosisto Demosisto\n£HKG_conservatism Democratic Party\n£HK_Citizens_Party Citizens Party\n[legco_HKG_socialism]\n£HKG_Neutral_Autocracy Democratic Alliance\n£HK_Green Green Party Hong Kong\n"
+ legco_localist_camp_desc: "  £HK_Indigenous Hong Kong Indigenous\n£HK_National Hong Kong National Party\n£HK_People_Power People Power\n£HK_Conservative_Alt_New Conservative Party"
+ legco_HKG_socialism: "[ROOT.legco_HKG_socialism]"
+
  legco_pro_beijing_seats: "§CPro-establishment Camp§! Seats: §C[?legco_PE_seats]§!"
  legco_pan_democracy_seats: "§8Pan-democracy Camp§! Seats: §8[?legco_PD_seats]§!"
  legco_localist_seats: "§GLocalist Camp§! Seats: §G[?legco_LC_seats]§!"
- legco_total_seats: "Total: §Y[?legco_total_seats]§!"
+
  legco_approvement_seats: "Approval: §G[?legco_approval_seats]§!"
  legco_opposition_seats: "Negative: §R[?legco_negative_seats]§!"
+ legco_total_seats: "Total: §Y[?legco_total_seats]§!"
+
+ legco_motion_vote_supports_tt: "§CPro-establishment Camp§! Supports: [?legco_PE_temp_support|2%](§C[?legco_PE_support]/[?legco_PE_seats]§!)\n§8Pan-democracy Camp§! Supports: [?legco_PD_temp_support|2%](§8[?legco_PD_support]/[?legco_PD_seats]§!)\n§GLocalist Camp§! Support: [?legco_LC_temp_support|2%](§G[?legco_LC_support]/[?legco_LC_seats]§!)"
+
  legco_motion_title: "Current Motion: "
- legco_current_motion: "[ROOT.legco_current_motion]"
+ legco_current_motion: "§Y[ROOT.legco_current_motion]§!"
+ legco_motion_effect: "[ROOT.legco_motion_effect]"
+ legco_require_votes: "[ROOT.legco_motion_effect]"
  legco_none_motion_tt: "None"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
  legco_electoral_reform_tt: "Electoral Reform"
  legco_funding_XRL_tt: "Funding of §3XRL HK section§!"
+
  legco_railway_development_strategy_2000_focus_tt: "The Motion §YRailway Development Strategy 2000§! will be voted in the §YLegCo§!."
  legco_approve_funding_for_XRL_focus_tt: "The §YFunding of§! §3XRL HK section§! will be voted in the §YLegCo§!."
  legco_electoral_reform_focus_tt: "The Motion §YElectoral Reform§! will be voted in the §YLegCo§! after Mainland's Goverment §Raccept it§!."
- legco_motion_vote_supports_tt: "§CPro-establishment Camp§! Supports: [?legco_PE_temp_support|2%](§C[?legco_PE_support|0]/[?legco_PE_seats]§!)\n§8Pan-democracy Camp§! Supports: [?legco_PD_temp_support|2%](§8[?legco_PD_support|0]/[?legco_PD_seats]§!)\n§GLocalist Camp§! Support: [?legco_LC_temp_support|2%](§G[?legco_LC_support|0]/[?legco_LC_seats]§!)"
+
+ legco_effect_railway_development_strategy_2000_tt: "Add §YRailway Development Strategy 2000§!, which grants()"
+ legco_effect_approve_funding_for_XRL_tt: "[HKG.GetFlag]Hong Kong §YTreasury§!: $-0.25 Billion\n§YHong Kong§! Add §G1§! §YRailways§! in a Province in the state.\n([CHI.GetFlag]People's Republic of China)[CHI.GetFlag]Chinese §YTreasury§!: $-0.75 Billion\n§YPearl River Delta§!:\n  Add §G3§! §YRailways§! in a province in the state"
+
+ legco_test_text: "<WIP>"
  #DYNAMIC MODIFIERS
  #Housing Issue
  UHM_dynamic_modifies_TT: "\nModify §Y$HKG_unrestricted_housing_market$§! by"
