--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -6571,20 +6571,46 @@
  MAL.Nat_Autocracy_desc: "(Military Junta) - Malian Armed Forces (French: Forces Armées Maliennes, FAM)\nMalian Armed Forces is the military of the Malian government which is composed of the Army (French: Armée de Terre), Republic of Mali Air Force (French: Force Aérienne de la République du Mali), and National Guard. The military formed in 1960 during the period of French decolonization and was initially formed by Malian conscripts and volunteer veterans of the French Armed Forces. The Malian Armed Forces would then go on to fight a series of conflicts against the Tuaregs, and participate in peacekeeping operations across all of West and Central Africa."
  MAL.Nat_Autocracy_icon: "£MAL_nationalist_junta"
  # Mauritania
- MAU.Western_Autocracy: "£generic_Western_Autocracy_small Democratic Republican Party for Renewal"
+ MAU.Western_Autocracy: "£MAU_western_autocracy Democratic Republican Party for Renewal"
+ MAU.Western_Autocracy_icon: "£MAU_western_autocracy"
  MAU.Western_Autocracy_desc: ""
- MAU.anarchist_communism: "£generic_anarchist_communism_small People's Progressive Alliance"
+ MAU.conservatism: "£MAU_western_conservative Union for Democracy and Progress"
+ MAU.conservatism_desc: ""
+ MAU.conservatism_icon: "£MAU_western_conservative"
+ MAU.socialism: "£MAU_western_socialist El Karama"
+ MAU.socialism_icon: "£MAU_western_socialist"
+ MAU.socialism_desc: "The Association of Synergy of Macau, often shortened to Synergy of Macao, is a centrist political party in Macau."
+ MAU.anarchist_communism: "£MAU_anarchist_communism People's Progressive Alliance"
+ MAU.anarchist_communism_icon: "£MAU_anarchist_communism"
  MAU.anarchist_communism_desc: ""
- MAU.Autocracy: "£generic_Autocracy_small Socialist Democratic Unionist Party"
+ MAU.Autocracy: "£MAU_autocracy Socialist Democratic Unionist Party"
+ MAU.Autocracy_icon: "£MAU_autocracy"
  MAU.Autocracy_desc: ""
- MAU.neutral_Social: "£generic_neutral_Social_small Rally of Democratic Forces"
+ MAU.Conservative: "£MAU_conservative Union of the Forces of Progress"
+ MAU.Conservative_icon: "£MAU_conservative"
+ MAU.conservatism_desc: ""
+ MAU.neutral_Social: "£MAU_neutral_socialism Rally of Democratic Forces"
+ MAU.neutral_Social_icon: "£MAU_neutral_socialism"
  MAU.neutral_Social_desc: ""
- MAU.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Tewassoul"
+ MAU.neutral_Social_alt: "£MAU_neutral_social_alt National Democratic Alliance"
+ MAU.neutral_Social_alt_icon: "£MAU_neutral_social_alt"
+ MAU.Neutral_conservatism: "£MAU_neutral_conservative HATEM"
+ MAU.Neutral_conservatism_desc: ""
+ MAU.Neutral_conservatism_icon: "£MAU_neutral_conservative"
+ MAU.Neutral_Muslim_Brotherhood: "£MAU_muslim_brotherhood Tewassoul"
+ MAU.Neutral_Muslim_Brotherhood_icon: "£MAU_muslim_brotherhood"
  MAU.Neutral_Muslim_Brotherhood_desc: ""
- MAU.Nat_Populism: "£generic_Nat_Populism_small Union for the Republic"
+ MAU.Nat_Populism: "£MAU_national_populist Union for the Republic"
+ MAU.Nat_Populism_icon: "£MAU_national_populist"
  MAU.Nat_Populism_desc: ""
- MAU.Nat_Fascism: "£generic_Nat_Fascism_small National Vanguard Party"
+ MAU.Nat_Populism_alt: "£MAU_national_populist_alt Parti El Insaf"
+ MAU.Nat_Populism_alt_icon: "£MAU_national_populist_alt"
+ MAU.Nat_Fascism: "£MAU_national_fascism National Vanguard Party"
+ MAU.Nat_Fascism_icon: "£MAU_national_fascism"
  MAU.Nat_Fascism_desc: ""
+ MAU.Nat_Autocracy: "£MAU_nationalist_junta Malian Armed Forces"
+ MAU.Nat_Autocracy_desc: ""
+ MAU.Nat_Autocracy_icon: "£MAU_nationalist_junta"
  # Malaysia
  MAY.socialism: "£generic_socialism_small Barisan Alternatif"
  MAY.socialism_desc: ""
