Singapore censorship bug fix

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -83,6 +83,7 @@ v1.10.0
   - Fixed being able to get income from expenses
   - Removed Finnish unique names from Japanese CV fighters.
   - Fixed duplication of namelists on SOV Ships
+  - western_conservatism no longer allows Singapore to implement a Chinese media model.
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
